<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.pruebas.proyectolenguajes.AppAdminAgregarProductoActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/appAdminLabelTituloAgregarProducto"
        android:id="@+id/textView17"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/textView21EspacioAgregarProducto"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView17"
        android:layout_alignParentLeft="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/appAdminLabelNombreAgregarProducto"
        android:id="@+id/textView22"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView21EspacioAgregarProducto"
        android:layout_alignParentLeft="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/textView23EspacioAgregarProducto"
        android:layout_below="@+id/textView22"
        android:layout_alignParentLeft="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/appAdminLabelDescripcionAgregarProducto"
        android:id="@+id/textView24"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView23EspacioAgregarProducto"
        android:layout_alignParentLeft="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/textView25EspacioAgregarProducto"
        android:layout_below="@+id/textView24"
        android:layout_alignParentLeft="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/appAdminLabelPrecioAgregarProducto"
        android:id="@+id/textView26"
        android:layout_below="@+id/textView25EspacioAgregarProducto"
        android:layout_alignParentLeft="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editTextNombreAgregarProducto"
        android:layout_alignBottom="@+id/textView22"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editTextPrecioAgregarProducto"
        android:layout_alignBottom="@+id/textView26"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/appAdminButtonGuardarAgregarProducto"
        android:id="@+id/buttonAceptarAgregarProducto"
        android:layout_below="@+id/textView26"
        android:layout_alignParentStart="true"
        android:layout_marginTop="41dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/appAdminButtonCancelarAgregarProducto"
        android:id="@+id/buttonCancelarAgregarProducto"
        android:layout_alignBottom="@+id/buttonAceptarAgregarProducto"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editTextDescripcionAgregarProducto"
        android:layout_above="@+id/textView25EspacioAgregarProducto"
        android:layout_alignEnd="@+id/editTextNombreAgregarProducto" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/textView30EspacioAgregarProducto"
        android:layout_below="@+id/textView26"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/appAdminLabelCantidadAgregarProducto"
        android:id="@+id/textView25"
        android:layout_below="@+id/textView30EspacioAgregarProducto"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editTextCantidadAgregarProducto"
        android:layout_alignBottom="@+id/textView25"
        android:layout_alignStart="@+id/editTextPrecioAgregarProducto" />
</RelativeLayout>
